monticore-generator/src/test/resources/cocos/invalid/A2103/A2103a.mc4
package cocos.invalid.A2103;

grammar A2103a {
  interface A;

  B extends A;

}